feat: done crud book service
